<resources>
    <string name="app_name">租赁订单</string>

    <string name="goumaitaochang">购买套餐</string>
    <string name="shiyongzhuyi">使用注意:</string>
    <string name="xiadan_data">下单时间</string>
    <string name="daoqi_data">到期时间</string>

    <string name="daituikuan">待退款</string>
    <string name="weijihuo">未激活</string>
    <string name="yijihuo">已激活</string>
    <string name="wuwangluo">当前无网络，请联网操作</string>

    <string name="shangwangshuoming">上网说明</string>
    <string name="goumaitianshu"> 购买数量（单位：天）</string>
    <string name="lijikaitong">立即开通</string>

    <string name="channelname">购买渠道</string>
    <string name="close">关闭</string>
    <string name="zhunerkefu">请联系准儿翻译机客服进行续租,\n扫描二维码或直接拨打客户电话</string>
    <string name="hotline_tel">400-9966525</string>
    <string name="qinlianxi_str">请联系</string>
    <string name="kefu_keepuse">客服进行续租</string>

    <string name="activi_starttime">生效时间</string>
    <string name="activi_endtime">截止时间</string>

    <string name="day_num1">该产品下单天数不支持30天以上，请修改</string>
    <string name="day_num2">该产品下单天数最小为1天，请修改</string>
    <string name="quxiao">取消</string>
    <string name="tijiao">提交</string>
    <string name="bukexiugai">该订单不可修改份数</string>
    <string name="zuidafenshu">最大下单份数</string>
    <string name="zuixiaofenshu">最小下单份数</string>
    <string name="dingdanhao">订单号:</string>
    <string name="zoudiule">准儿，走丢了~</string>
    <string name="isnonet">亲，请检查网络连接~</string>
    <string name="success">下单成功</string>
    <string name="fail">下单失败</string>
    <string name="weixin">请用微信扫码付款</string>
    <string name="day">天</string>
    <string name="gong">共</string>
    <string name="gong1">共</string>
    <string name="rmb">元</string>
    <string name="dollar">美元</string>

    <string name="taochangxiangqing">购买详情</string>
    <string name="dingdan">产品名称:　</string>
    <string name="jihuo">激活状态:</string>
    <string name="help">获取帮助</string>
    <string name="xuzu">续租</string>
    <string name="ruhejihuo">如何激活:</string>
    <string name="jixu_goumai">继续购买</string>
    <string name="jihuo_help">到达目的地国家后，重启翻译机即可激活</string>
    <string name="iccid">内置SIM卡读取错误</string>
    <string name="min_days1">最少下单天数为</string>
    <string name="min_days2">天。</string>
    <string name="zhifubao">请用支付宝扫码付款</string>

    <string name="weixin_pay">微信支付</string>
    <string name="zhifubao_pay">支付宝</string>
    <string name="paypal_pay">paypal</string>
    <string name="pay_type">请选择付款方式</string>

    <string name="channelname">购买渠道</string>
    <string name="close">关闭</string>
    <string name="zhunerkefu">请联系准儿翻译机客服进行续租,\n扫描二维码或直接拨打客户电话</string>
    <string name="hotline_tel">400-9966525</string>
    <string name="qinlianxi_str">请联系</string>
    <string name="kefu_keepuse">客服进行续租</string>

    <string name="activi_starttime">生效时间</string>
    <string name="activi_endtime">截止时间</string>
</resources>
