<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_dingdan_number"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20px"
        android:layout_marginRight="20px"
        android:layout_marginTop="30px"
        android:textColor="#ffffff"
        android:textSize="30px"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/item_view1"
        android:layout_width="0px"
        android:layout_height="1px"
        android:layout_marginBottom="30px"
        android:layout_marginTop="60px"
        android:background="#333"
        app:layout_constraintLeft_toLeftOf="@id/tv_dingdan_number"
        app:layout_constraintRight_toRightOf="@id/tv_dingdan_number"
        app:layout_constraintTop_toBottomOf="@id/ll" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@id/item_view1"
        app:layout_constraintRight_toRightOf="@id/item_view1"
        app:layout_constraintTop_toBottomOf="@id/tv_dingdan_number">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dingdanhao"
                android:textColor="#ffffff"
                android:textSize="24px" />

            <TextView
                android:id="@+id/dingdan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14px"
                android:textColor="#ffffff"
                android:textSize="24px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daoqi_data"
                android:textColor="#ffffff"
                android:textSize="24px" />

            <TextView
                android:id="@+id/dingdan_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14px"
                android:textColor="#ffffff"
                android:textSize="24px" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_xq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_xianqing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taochangxiangqing"
                android:textColor="#ffffff"
                android:textSize="24px" />

            <TextView
                android:id="@+id/tv_goumaixianqing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14px"
                android:textColor="#ffffff"
                android:textSize="24px" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_jihuo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jihuo"
                android:textColor="#ffffff"
                android:textSize="24px" />

            <TextView
                android:id="@+id/tv_jihuozhuantai"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14px"
                android:textSize="24px" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_jihuo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ruhejihuo"
                android:textColor="#ffffff"
                android:textSize="24px" />

            <TextView
                android:id="@+id/tv_jihuo_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14px"
                android:textSize="24px"
                android:visibility="gone" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shiyongzhuyi"
                android:textColor="#fff"
                android:textSize="24px" />

            <TextView
                android:id="@+id/dingdan_zhuyi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14px"
                android:textColor="#ffffff"
                android:textSize="24px" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_xuzu"
            android:layout_width="match_parent"
            android:layout_height="80px"
            android:layout_marginLeft="20px"
            android:layout_marginRight="20px"
            android:layout_marginTop="40px"
            android:background="@drawable/shape_background"
            android:gravity="center"
            android:text="@string/xuzu"
            android:textColor="#ffffff"
            android:textSize="30px"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_help"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20px"
            android:gravity="center_horizontal"
            android:text="@string/help"
            android:textColor="#fe5000"
            android:textSize="24px" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>