<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/px560"
    android:background="#fff">

    <ImageView
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/px20"
        android:layout_marginTop="@dimen/text_size24"
        android:src="@mipmap/close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_cancel"
        android:layout_centerHorizontal="true"
        android:text="@string/pay_type"
        android:textSize="@dimen/text_size30" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/px20"
        android:layout_marginRight="@dimen/px20"
        android:layout_marginTop="@dimen/text_size130"
        android:layout_marginBottom="@dimen/text_size40">

        <LinearLayout
            android:id="@+id/Lin_Wechat"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_WeChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/text_size20"
                android:drawableTop="@mipmap/weixin"
                android:gravity="center"
                android:text="@string/weixin_pay"
                android:textColor="#030303"
                android:textSize="@dimen/text_size24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Lin_Alipay"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_Alipay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/text_size20"
                android:drawableTop="@mipmap/zhifubao"
                android:gravity="center"
                android:text="@string/zhifubao_pay"
                android:textColor="#030303"
                android:textSize="@dimen/text_size24" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/Lin_PayPal"
            android:layout_width="0px"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_PayPal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/text_size20"
                android:drawableTop="@mipmap/paypal"
                android:gravity="center"
                android:text="@string/paypal_pay"
                android:textColor="#030303"
                android:textSize="@dimen/text_size24" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
