<?xml version="1.0" encoding="utf-8"?>
<com.aibabel.surfinternet.utils.MyScrollview xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aibabel.surfinternet.activity.OrderActivity">

    <RelativeLayout
        android:id="@+id/rl1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_order"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/ll"
                android:layout_width="match_parent"
                android:layout_height="88px"
                android:orientation="horizontal"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                >

                <ImageView
                    android:id="@+id/iv_back1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/back"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    />
                <TextView
                    android:id="@+id/tv_tcxq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/taochangxiangqing"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size40"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    />
                <TextView
                    android:id="@+id/tv_net_help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/text_size20"
                    android:textColor="#fe5000"
                    android:visibility="gone"
                    android:layout_alignBottom="@id/tv_tcxq"
                    android:text="连网帮助"/>
                <View
                    android:id="@+id/item_view1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/text_size1"
                    android:background="#333"
                    android:layout_alignParentBottom="true"
                    />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_dingdan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
            </RelativeLayout>

            <View
                android:id="@+id/item_view2"
                android:layout_width="0px"
                android:layout_height="@dimen/text_size1"
                android:layout_marginTop="@dimen/text_size60"
                android:background="#333"
                app:layout_constraintLeft_toLeftOf="@id/tv_purchase"
                app:layout_constraintRight_toRightOf="@id/tv_purchase"
                app:layout_constraintTop_toBottomOf="@id/rl"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/tv_purchase"
                android:layout_width="match_parent"
                android:layout_height="@dimen/text_size80"
                android:layout_marginLeft="@dimen/text_size20"
                android:layout_marginRight="@dimen/text_size20"
                android:layout_marginTop="@dimen/text_size40"
                android:background="@drawable/shape_background"
                android:gravity="center"
                android:text="@string/goumaitaochang"
                android:visibility="gone"
                android:textColor="#ffffff"
                android:textSize="@dimen/text_size30"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/item_view2" />
        </android.support.constraint.ConstraintLayout>

        <RelativeLayout
            android:id="@+id/rl_NoNet"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_back2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/back" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/text_size500"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@mipmap/isnet" />

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/px70"
                    android:text="@string/isnonet"
                    android:textColor="#fff"
                    android:textSize="@dimen/text_size30" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</com.aibabel.surfinternet.utils.MyScrollview>